# pytorch-base-project

./: .coverage  .coveragerc  .gitignore  Dockerfile  Makefile  OLD_requirements.txt  README.md  hparameters.py  pipeline_runner.py  pyproject.toml  requirements.txt  sections.json  train.py
.github/workflows/: build_component.yml  test.yml
data/: dataset.py  loader.py
model/: blocks.py  model.py
test/: test_blocks.py  test_data_loader.py  test_model.py  test_train.py
train_component/: Dockerfile  main.py
utils/: manage.py  test.py  train.py
