[project]
name = "cnn-base-example-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform>=1.160.0",
    "google-cloud-secret-manager>=2.29.0",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pyjwt>=2.13.0",
    "torch>=2.13.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
